Fixes login form on mobile

--- a/bookshelf/static/style.css
+++ b/bookshelf/static/style.css
@@ -688,6 +688,7 @@ form input.button {
 	cursor: pointer;
 	font-size: 1em;
 	padding: 4px 10px 6px;
+	-webkit-appearance: none;
 }
 
 form input.button:hover {
@@ -722,6 +723,7 @@ form .group.optional input[type=number] {
 
 form.login {
 	margin-top: 1em;
+	padding-bottom: 1.5em;
 }
 
 
